logslurms/slurm-69972_1.err
Note: switching to '4c4a39e168031719b7ccc25237254c852db35e2c'.

You are in 'detached HEAD' state. You can look around, make experimental
changes and commit them, and you can discard any commits you make in this
state without impacting any branches by switching back to a branch.

If you want to create a new branch to retain commits you create, you may
do so (now or later) by using -c with the switch command. Example:

  git switch -c <new-branch-name>

Or undo this operation with:

  git switch -

Turn off this advice by setting config variable advice.detachedHead to false

HEAD is now at 4c4a39e on verra
Traceback (most recent call last):
  File "/usr/lib/python3.8/runpy.py", line 194, in _run_module_as_main
    return _run_code(code, main_globals, None,
  File "/usr/lib/python3.8/runpy.py", line 87, in _run_code
    exec(code, run_globals)
  File "/tmp/abdellaoui_sou-69972/code/project/sample.py", line 9, in <module>
    from project.utils.script_util_duo import (
  File "/tmp/abdellaoui_sou-69972/code/project/utils/script_util_duo.py", line 5, in <module>
    from . import fdb as fdb
  File "/tmp/abdellaoui_sou-69972/code/project/utils/fdb.py", line 174
    res.append(sample)
    ^
IndentationError: expected an indented block
